--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Challenge: A picture-perfect trip</title>
         <meta charset="utf-8">
     </head>
-    
+    <a href="https://EggplantChristmas.github.io/somthing.html">page 2</a>
     <body>
         <h1>About Me Website</h1>
         
