--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         <title>Challenge: A picture-perfect trip</title>
         <meta charset="utf-8">
     </head>
+    <link rel="stylesheet" type"text/css" href="https://EggplantChristmas.github.io/style.css"
+
     <a href="https://EggplantChristmas.github.io/somthing.html">page 2</a>
     <body>
         <h1>About Me Website</h1>
