--- a/somthing.html
+++ b/somthing.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
 <html>
 <body>
 
 <h1> Home Page</h1>
 
 </body>
+<a href="https://EggplantChristmas.github.io/index.html">Home</a>
+
 </html>
