--- a/somthing.html
+++ b/somthing.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 
-<h1> Home Page</h1>
+<h1> page 2</h1>
 
 </body>
 <a href="https://EggplantChristmas.github.io/index.html">Home</a>
