--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
     <head>
+        <a href="https://EggplantChristmas.github.io/somthing.html">page 2</a>
         <title>Challenge: A picture-perfect trip</title>
         <meta charset="utf-8">
     </head>
-    <link rel="stylesheet" type"text/css" href="https://EggplantChristmas.github.io/style.css"
 
     <body>
         <a href="https://EggplantChristmas.github.io/somthing.html">page 2</a>
