--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <a href="https://EggplantChristmas.github.io/somthing.html">page 2</a>
+        <link rel="stylesheet" type="text/css" href="https://EggplantChristmas.github.io/style.css"
         <title>Challenge: A picture-perfect trip</title>
         <meta charset="utf-8">
     </head>
