--- a/somthing.html
+++ b/somthing.html
@@ -2,7 +2,8 @@
     <head>
         <meta charset="utf-8">
         <title>Project: Travel webpage</title>
-        
+        <a href="https://EggplantChristmas.github.io/index.html">home</a>
+
          <style>
          .example {
              
